# hiwonder-servo-sdk

./: .gitignore  HX-30HM寄存器列表及参数.xls  README.md  README_CN.md
docs/: protocol.md  protocol_en.md  register_table.md  register_table_en.md
esp32/: HiwonderServo.cpp  HiwonderServo.h  library.properties
esp32/examples/basic_motion/: basic_motion.ino
esp32/examples/sync_control/: sync_control.ino
python/: hiwonder_servo.py  pyproject.toml  setup.py
python/examples/: basic_motion.py  scan_bus.py  sync_control.py
python/hiwonder/: __init__.py  servo.py
raspberrypi/: hiwonder_servo_rpi.py
raspberrypi/examples/: basic_motion_rpi.py  sync_control_rpi.py
stm32/: README_STM32.md  hiwonder_servo_stm32.c  hiwonder_servo_stm32.h
stm32/examples/: basic_motion.c  sync_control.c
